--- a/client/app/src/main/res/layout/compilation_dialog_item.xml
+++ b/client/app/src/main/res/layout/compilation_dialog_item.xml
@@ -4,14 +4,16 @@
     android:id="@+id/card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="10dp"
+    android:background="?android:attr/selectableItemBackground"
     android:orientation="horizontal">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/author_photo"
         android:layout_width="48dp"
+        android:layout_marginStart="5dp"
         android:layout_height="48dp"
         android:layout_gravity="center"
+        android:layout_marginVertical="10dp"
         android:layout_marginEnd="12dp"
         android:scaleType="centerCrop"
         app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerRoundSquarePercent" />
@@ -22,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginVertical="10dp"
         android:text="@string/route_placeholder_text"
         android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
         android:textColor="?android:attr/textColorAlertDialogListItem" />
