--- a/client/app/src/main/res/layout/fragment_routes.xml
+++ b/client/app/src/main/res/layout/fragment_routes.xml
@@ -63,27 +63,6 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    <!--    <androidx.recyclerview.widget.RecyclerView-->
-    <!--        android:id="@+id/recycler_routes"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent"-->
-    <!--        android:layout_gravity="bottom"-->
-    <!--        app:layout_anchor="@id/shimmer_container"-->
-    <!--        app:layout_anchorGravity="bottom"-->
-    <!--        app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
-
-    <!--    <ProgressBar-->
-    <!--        android:id="@+id/progressBar"-->
-    <!--        style="?android:attr/progressBarStyle"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:foregroundGravity="center"-->
-    <!--        android:visibility="gone"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />-->
-
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/newRouteFab"
         style="?attr/floatingActionButtonSecondaryStyle"
@@ -92,10 +71,10 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="12dp"
         android:contentDescription="Nuovo itinerario"
-        android:text="Nuovo itinerario"
         android:enabled="true"
-        app:icon="@drawable/ic_outline_add_location_24"
+        android:text="Nuovo itinerario"
         android:transitionName="transitionNewRouteFab"
-        app:fabSize="normal" />
+        app:fabSize="normal"
+        app:icon="@drawable/ic_outline_add_location_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
