--- a/client/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/client/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,14 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/child_home"
+        android:title="@string/title_home" />
+
+    <item
         android:id="@+id/navigation_routes"
         android:icon="@drawable/child_routes"
         android:title="@string/title_routes" />
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/child_home"
-        android:title="@string/title_home" />
+        android:id="@+id/navigation_chat_list"
+        android:icon="@drawable/child_chat"
+        android:title="@string/title_chat" />
 
     <item
         android:id="@+id/navigation_profile"
