--- a/client/app/src/main/res/values-night/themes.xml
+++ b/client/app/src/main/res/values-night/themes.xml
@@ -45,6 +45,14 @@
         <!--        <item name="snackbarTextViewStyle">@style/Widget.NaTour.Dark.SnackbarText</item>-->
     </style>
 
+    <style name="TopBarColorElevation">
+        <item name="android:background">@color/md_theme_dark_top_bar</item>
+    </style>
+
+    <style name="SearchBarBackground">
+        <item name="android:backgroundTint">@color/md_theme_dark_top_bar</item>
+    </style>
+
     <!-- Alternative background for certain screens -->
     <style name="BackgroundAlternative">
         <item name="android:background">@color/md_theme_dark_surface</item>
