Chat terminata Lista segnalazioni admin terminata

--- a/client/app/src/main/res/layout/chat_item.xml
+++ b/client/app/src/main/res/layout/chat_item.xml
@@ -16,7 +16,7 @@
         android:layout_gravity="center"
         android:layout_marginEnd="16dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_avatar_svgrepo_com"
+        android:src="@drawable/ic_avatar_icon"
         app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
 
 
