--- a/client/app/src/main/res/layout/fragment_chat_list.xml
+++ b/client/app/src/main/res/layout/fragment_chat_list.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:liftOnScroll="true"
-        app:liftOnScrollTargetViewId="@id/recycler_routes">
+        app:liftOnScrollTargetViewId="@id/recycler_reports">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/topAppBar"
