--- a/client/app/src/main/res/layout/fragment_profile.xml
+++ b/client/app/src/main/res/layout/fragment_profile.xml
@@ -32,7 +32,7 @@
             android:layout_height="128dp"
             android:layout_marginTop="14dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_avatar_svgrepo_com"
+            android:src="@drawable/ic_avatar_icon"
             app:layout_constraintBottom_toTopOf="@+id/textview_username"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
