--- a/client/app/src/main/res/layout/fragment_create_route_photos.xml
+++ b/client/app/src/main/res/layout/fragment_create_route_photos.xml
@@ -16,6 +16,7 @@
             android:id="@+id/topAppBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/generic_close"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             app:title="Aggiunta foto" />
 
