--- a/client/app/src/main/res/menu/top_bar_new_map_menu.xml
+++ b/client/app/src/main/res/menu/top_bar_new_map_menu.xml
@@ -10,17 +10,24 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/import_gpx"
-        android:contentDescription="Importa file GPX"
-        android:icon="@drawable/ic_baseline_file_upload_24"
-        android:title="Importa file GPX"
-        app:showAsAction="never" />
-
-    <item
         android:id="@+id/clear_map"
         android:contentDescription="Rimuovi tutti i marker inseriti"
         android:icon="@drawable/ic_baseline_cleaning_services_24"
         android:title="Rimuovi tutti i maker"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/import_gpx"
+        android:contentDescription="Importa file GPX"
+        android:icon="@drawable/ic_baseline_file_upload_24"
+        android:title="Importa file GPX"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/exit_map"
+        android:contentDescription="Esci"
+        android:icon="@drawable/ic_baseline_close_24"
+        android:title="Chiudi"
         app:showAsAction="never" />
 
 </menu>
