--- a/client/app/src/main/res/values-night/themes.xml
+++ b/client/app/src/main/res/values-night/themes.xml
@@ -36,6 +36,11 @@
         <item name="colorSurfaceInverse">@color/md_theme_dark_inverseSurface</item>
         <item name="colorPrimaryInverse">@color/md_theme_dark_primaryInverse</item>
 
+        <item name="materialAlertDialogTheme">
+            @style/ThemeOverlay.Material3.MaterialAlertDialog.Centered
+        </item>
+
+
         <item name="bottomSheetDialogTheme">@style/ThemeOverlay.NaTour.Dark.BottomSheetDialog</item>
 
         <!--        <item name="snackbarStyle">@style/Widget.NaTour.Dark.Snackbar</item>-->
